# Unitree-Go2-Automated-Home-Inspector

./: .gitignore  README.md
Autonomous Navigation Algorithm/ltm_exploration_core/: CMakeLists.txt  package.xml
Autonomous Navigation Algorithm/ltm_exploration_core/config/: exploration_params.yaml
Autonomous Navigation Algorithm/ltm_exploration_core/launch/: autonomous_exploration.launch.py
Autonomous Navigation Algorithm/ltm_exploration_core/scripts/: frontier_exploration_node.py
Feedback and Analysis System/: README.md
Feedback and Analysis System/map_feedback/: package.xml  setup.py
Feedback and Analysis System/map_feedback/launch/: feedback.launch.py
Feedback and Analysis System/map_feedback/map_feedback/: map_feedback_node.py
Feedback and Analysis System/map_feedback/resource/: map_feedback
custom_environment_loader/: guide.md
our_remote_environment/: guide.md
remote/: 2-run-perception.sh  3-run-rviz.sh  4-run-navigation.sh  guide.md  run_go2_sim.sh  run_ros2_navigation.sh
task-1/: guide.md  stand_test.py
task-2/: guide.md
